--- a/index.css
+++ b/index.css
@@ -1,67 +1,86 @@
+body {
+background-image:url('glasgow.jpg');
+}
+
 #container {
 width:1000px;
-/*margin-left:320px;*/
 margin: 0 auto;
+margin-bottom:-8px;
 }
 
 #header {
-width:1000px;
-height:150px;
-border:1px solid;
-background-color:#B0C4DE;
-color:white;
-font-family:'Lucida Sans Unicode', 'Lucida Grande’, sans-serif;
+width:1351px;
+height:162px;
+color:navy;
+margin: 0 auto;
+margin-top:-21px;
+margin-left:-10px;
 }
 
 #headerlogo {
-/*position:absolute;*/
 float:right;
+margin-right:100px;
 }
 
 #title {
-width:450px;
-margin-left:100px;
-}
-
-/*#headerlogo {
-border:1px solid;
-float:right;
-width:400px;
-}*/
+width:650px;
+margin-left:212px;}
 
 h1 {
 text-align:center;
+padding-top: 15px;
 }
 
 #menu {
 width:200px;
 height:950px;
-border:1px solid;
 float:left;
+background-color: #E5E5E5;
+border-radius:10px;
+opacity:0.85;
+}
+
+#navigation {
+margin-left:20px;
+color:navy;
 }
 
 li {
 list-style-type:none;
-}
-
-#authentication {
-height:100px;
-width:100px;
-top:50px;
-left:50px;
-border:1px solid;
+color:white;
 }
 
 #content {
-width:1000px;
-height:950px;
-border:1px solid;
+width: 796px;
+height: 950px;
+background-color: #E5E5E5;
+border-radius:10px;
+opacity:0.85;
+color: navy;
+margin-left: 200px;
+text-align:justify;
+}
+
+#texttitle {
+text-align:center;
+padding-top: 15px;
+}
+
+#textcontent {
+padding: 10px;
+}
+
+.youtube-player {
+margin-left: 55px;
 }
 
 #footer {
-width:1000px;
-height:50px;
-border:1px solid;
-text-align:center;
-font-size:11px;
+width: 1351px;
+height: 50px;
+text-align: center;
+font-size: 14px;
+margin-left: -176px;
+margin-top: -14px;
+background-color: #888888;
+color: white;
 }
