--- a/index.css
+++ b/index.css
@@ -340,8 +340,20 @@ width:600px;
 height:200px;
 padding:2px;
 }
+.floatImageRight{
+width:200px;
+height:200px;
+padding-left:200px;
+padding-right:200px;
+padding-top:10px;
+float:right;
+}
 
-.messageText{
-font-size: 14px;
-padding-left: 5px;
+.floatImageLeft{
+width:200px;
+height:200px;
+padding-left:200px;
+padding-right:200px;
+padding-top:10px;
+float:left;
 }
