--- a/index.css
+++ b/index.css
@@ -359,3 +359,18 @@ padding:2px;
 font-size: 14px;
 padding-left: 5px;
 }
+.floatImageRight{
+width:200px;
+height:200px;
+padding-left:200px;
+padding-right:200px;
+padding-top:10px;
+float:right;
+}
+.floatImageLeft{
+width:200px;
+height:200px;
+padding-left:200px;
+padding-right:200px;
+padding-top:10px;
+}
